Fix z-index on button outlines

--- a/lib-less/_custom-bootstrap.less
+++ b/lib-less/_custom-bootstrap.less
@@ -100,7 +100,7 @@ a.text-muted {
     background: @btn-default-bg;
 
     .input-group & {
-      z-index: 10; // So border stands out
+      z-index: @zindex-button; // So border stands out
     }
   }
 
